[package]
name = "forest"
version = "0.0.2"
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust" }
expression = "0.3.4"
rand = "0.7.2"
expression-num = "0.2.3"
turtle-graphics = "0.1.2"
