[package]
name = "lindenmayer"
version = "0.2.0"
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

[dependencies]
expression = "0.3.4"
rand = "0.7.3"
expression-num = "0.2.3"
turtle-graphics = {git = "https://github.com/Terkwood/turtle-graphics-rs", branch = "hack/stroke-width"}
resvg ={version =  "0.9.0", features = ["cairo-backend"]}
usvg = "0.9.0"
