[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "lindenmayer"
version = "0.5.2-b"

[dependencies]
expression = "0.3.4"
expression-num = "0.2.3"
rand = "0.8.3"
resvg = "0.13.1"
tiny-skia = "0.4.2"
turtle = {git = "https://github.com/Terkwood/turtle", tag = "v0.4.0"}
usvg = "0.13.1"
